--- a/d09/d09/Base.lproj/Main.storyboard
+++ b/d09/d09/Base.lproj/Main.storyboard
@@ -46,16 +46,54 @@
         <!--My Articles-->
         <scene sceneID="ute-QB-WM1">
             <objects>
-                <viewController storyboardIdentifier="ScndVC" title="My Articles" automaticallyAdjustsScrollViewInsets="NO" id="vDN-wD-X5c" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ScndVC" title="My Articles" automaticallyAdjustsScrollViewInsets="NO" id="vDN-wD-X5c" customClass="ScndViewController" customModule="d09" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="EBq-6F-IHI"/>
                         <viewControllerLayoutGuide type="bottom" id="rCY-b6-CMK"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="cSc-NW-mTL">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="SyD-aN-jg2">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="myCell" textLabel="5x6-8G-WgD" style="IBUITableViewCellStyleDefault" id="SUX-7j-nKw">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="SUX-7j-nKw" id="1fw-zA-8ut">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="5x6-8G-WgD">
+                                                    <rect key="frame" x="15" y="0.0" width="345" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="vDN-wD-X5c" id="mcc-in-Lcd"/>
+                                    <outlet property="delegate" destination="vDN-wD-X5c" id="ZZb-Eg-SPs"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="SyD-aN-jg2" firstAttribute="leading" secondItem="cSc-NW-mTL" secondAttribute="leading" id="Ada-es-Iry"/>
+                            <constraint firstAttribute="trailing" secondItem="SyD-aN-jg2" secondAttribute="trailing" id="L0h-Y4-EBj"/>
+                            <constraint firstItem="SyD-aN-jg2" firstAttribute="top" secondItem="EBq-6F-IHI" secondAttribute="bottom" id="mzq-bO-Zjg"/>
+                            <constraint firstItem="SyD-aN-jg2" firstAttribute="bottom" secondItem="rCY-b6-CMK" secondAttribute="top" id="yBJ-wH-Iem"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="My Articles" id="Rd9-Ch-ur4"/>
+                    <connections>
+                        <outlet property="myTableVC" destination="SyD-aN-jg2" id="d81-WD-itg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MhY-do-u1x" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -65,7 +103,7 @@
         <scene sceneID="laY-oc-sJK">
             <objects>
                 <navigationController storyboardIdentifier="navVC" id="9Bw-Wu-rwD" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="dc0-fO-sTg">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" translucent="NO" id="dc0-fO-sTg">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
