--- a/d09/d09/Base.lproj/Main.storyboard
+++ b/d09/d09/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -19,11 +19,11 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kd4-W8-a6j">
-                                <rect key="frame" x="16" y="28" width="343" height="619"/>
+                                <rect key="frame" x="16" y="28" width="288" height="520"/>
                                 <state key="normal" title="Authenticate yourself"/>
                                 <connections>
                                     <action selector="authButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="S0F-iS-8eM"/>
@@ -52,50 +52,50 @@
                         <viewControllerLayoutGuide type="bottom" id="rCY-b6-CMK"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="cSc-NW-mTL">
-                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="424" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="SyD-aN-jg2">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="myCell" rowHeight="424" id="SUX-7j-nKw" customClass="ArticleTableViewCell" customModule="d09" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="424"/>
+                                        <rect key="frame" x="0.0" y="28" width="320" height="424"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="SUX-7j-nKw" id="1fw-zA-8ut">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="424"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="424"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="aAT-Qg-eYs">
-                                                    <rect key="frame" x="8" y="8" width="359" height="407.5"/>
+                                                    <rect key="frame" x="8" y="8" width="304" height="407.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XIw-aG-fYf">
-                                                            <rect key="frame" x="0.0" y="0.0" width="359" height="20.5"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="304" height="20.5"/>
                                                             <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Rty-IP-oCj">
-                                                            <rect key="frame" x="0.0" y="25.5" width="359" height="305.5"/>
+                                                            <rect key="frame" x="0.0" y="25.5" width="304" height="305.5"/>
                                                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lfO-Ww-SkT">
-                                                            <rect key="frame" x="0.0" y="336" width="359" height="20.5"/>
+                                                            <rect key="frame" x="0.0" y="336" width="304" height="20.5"/>
                                                             <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CreationDate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qoP-iy-HOo">
-                                                            <rect key="frame" x="0.0" y="361.5" width="359" height="20.5"/>
+                                                            <rect key="frame" x="0.0" y="361.5" width="304" height="20.5"/>
                                                             <color key="backgroundColor" red="1" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ModificationDate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JL1-48-wLI">
-                                                            <rect key="frame" x="0.0" y="387" width="359" height="20.5"/>
+                                                            <rect key="frame" x="0.0" y="387" width="304" height="20.5"/>
                                                             <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
@@ -137,6 +137,7 @@
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="sq3-Ev-kP6">
                             <connections>
                                 <action selector="addArticle:" destination="vDN-wD-X5c" id="1PZ-Rm-wD1"/>
+                                <segue destination="GpU-DZ-tiU" kind="show" id="FHZ-qd-FRV"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -148,11 +149,85 @@
             </objects>
             <point key="canvasLocation" x="1749.5999999999999" y="120.98950524737631"/>
         </scene>
+        <!--Create Article-->
+        <scene sceneID="9w3-9A-B3K">
+            <objects>
+                <viewController title="Create Article" id="GpU-DZ-tiU" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="KH1-yq-2jv"/>
+                        <viewControllerLayoutGuide type="bottom" id="rui-oU-g6t"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="9Ui-ch-tWI">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="sx3-xI-8Oc">
+                                <rect key="frame" x="16" y="64" width="288" height="504"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="V1l-4b-GPL">
+                                        <rect key="frame" x="0.0" y="0.0" width="288" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="eZM-7b-CLa"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="bYX-IW-cDu">
+                                        <rect key="frame" x="0.0" y="31" width="288" height="218"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="jnT-ZA-2HQ">
+                                        <rect key="frame" x="0.0" y="250" width="288" height="30"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2XN-mb-s0e">
+                                                <rect key="frame" x="0.0" y="0.0" width="144" height="30"/>
+                                                <state key="normal" title="Take Picture"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lCl-Iu-M3i">
+                                                <rect key="frame" x="144" y="0.0" width="144" height="30"/>
+                                                <state key="normal" title="Choose Picture"/>
+                                            </button>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="Waa-gD-Al7"/>
+                                        </constraints>
+                                    </stackView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pic" translatesAutoresizingMaskIntoConstraints="NO" id="EjF-43-Nlq">
+                                        <rect key="frame" x="0.0" y="281" width="288" height="223"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="223" id="NdX-Pj-qCC"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="sx3-xI-8Oc" firstAttribute="trailing" secondItem="9Ui-ch-tWI" secondAttribute="trailingMargin" id="JV3-Ea-n5V"/>
+                            <constraint firstItem="sx3-xI-8Oc" firstAttribute="top" secondItem="KH1-yq-2jv" secondAttribute="bottom" id="LYZ-0C-xUh"/>
+                            <constraint firstItem="sx3-xI-8Oc" firstAttribute="leading" secondItem="9Ui-ch-tWI" secondAttribute="leadingMargin" id="ePk-lp-PjF"/>
+                            <constraint firstItem="rui-oU-g6t" firstAttribute="top" secondItem="sx3-xI-8Oc" secondAttribute="bottom" id="fOP-3h-VhQ"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="My Articles" id="zZp-VW-6nt">
+                        <barButtonItem key="leftBarButtonItem" style="plain" systemItem="cancel" id="kJI-QK-dTO"/>
+                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="save" id="mU5-mt-XiK"/>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZOZ-Rd-FDQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2493.5999999999999" y="120.98950524737631"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="laY-oc-sJK">
             <objects>
                 <navigationController storyboardIdentifier="navVC" id="9Bw-Wu-rwD" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" translucent="NO" id="dc0-fO-sTg">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="dc0-fO-sTg">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -165,4 +240,7 @@
             <point key="canvasLocation" x="911" y="121"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="pic" width="976" height="649"/>
+    </resources>
 </document>
