--- a/d09/d09/Base.lproj/Main.storyboard
+++ b/d09/d09/Base.lproj/Main.storyboard
@@ -66,37 +66,50 @@
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="424"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="aAT-Qg-eYs">
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="aAT-Qg-eYs">
                                                     <rect key="frame" x="8" y="8" width="304" height="407.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XIw-aG-fYf">
-                                                            <rect key="frame" x="0.0" y="0.0" width="304" height="20.5"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="304" height="30"/>
                                                             <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="30" id="kEM-VP-DpH"/>
+                                                            </constraints>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Rty-IP-oCj">
-                                                            <rect key="frame" x="0.0" y="25.5" width="304" height="305.5"/>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Rty-IP-oCj">
+                                                            <rect key="frame" x="0.0" y="35" width="304" height="305.5"/>
                                                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="305" id="di4-yk-h9h"/>
+                                                                <constraint firstAttribute="width" constant="304" id="rfb-5f-Ang"/>
+                                                            </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lfO-Ww-SkT">
-                                                            <rect key="frame" x="0.0" y="336" width="304" height="20.5"/>
+                                                            <rect key="frame" x="0.0" y="345.5" width="304" height="11.5"/>
                                                             <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CreationDate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qoP-iy-HOo">
-                                                            <rect key="frame" x="0.0" y="361.5" width="304" height="20.5"/>
+                                                            <rect key="frame" x="0.0" y="362" width="304" height="20.5"/>
                                                             <color key="backgroundColor" red="1" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="20" id="Ofd-AV-jnM"/>
+                                                            </constraints>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ModificationDate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JL1-48-wLI">
-                                                            <rect key="frame" x="0.0" y="387" width="304" height="20.5"/>
+                                                            <rect key="frame" x="0.0" y="387.5" width="304" height="20"/>
                                                             <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="20" id="TpA-os-Pzv"/>
+                                                            </constraints>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -105,17 +118,17 @@
                                                 </stackView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="trailingMargin" secondItem="aAT-Qg-eYs" secondAttribute="trailing" id="02M-2R-Osc"/>
                                                 <constraint firstItem="aAT-Qg-eYs" firstAttribute="top" secondItem="1fw-zA-8ut" secondAttribute="topMargin" id="5eF-uE-8Ts"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="aAT-Qg-eYs" secondAttribute="bottom" id="X9q-bZ-EnG"/>
                                                 <constraint firstAttribute="leadingMargin" secondItem="aAT-Qg-eYs" secondAttribute="leading" id="qht-Ms-F2g"/>
+                                                <constraint firstItem="aAT-Qg-eYs" firstAttribute="trailing" secondItem="1fw-zA-8ut" secondAttribute="trailingMargin" id="sEj-VK-Gdh"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="contentLabel" destination="lfO-Ww-SkT" id="loL-ai-bID"/>
                                             <outlet property="creationLabel" destination="qoP-iy-HOo" id="eoR-oP-Ukg"/>
-                                            <outlet property="imageLabel" destination="Rty-IP-oCj" id="LcK-9J-0fP"/>
                                             <outlet property="modificationLabel" destination="JL1-48-wLI" id="PhS-ji-dI4"/>
+                                            <outlet property="myImageView" destination="Rty-IP-oCj" id="mGx-6q-cL2"/>
                                             <outlet property="myTitle" destination="XIw-aG-fYf" id="Scd-hV-Zzc"/>
                                         </connections>
                                     </tableViewCell>
@@ -152,7 +165,7 @@
         <!--Create Article-->
         <scene sceneID="9w3-9A-B3K">
             <objects>
-                <viewController title="Create Article" id="GpU-DZ-tiU" customClass="CreateArticleViewController" customModule="d09" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CreateArticleViewController" title="Create Article" id="GpU-DZ-tiU" customClass="CreateArticleViewController" customModule="d09" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="KH1-yq-2jv"/>
                         <viewControllerLayoutGuide type="bottom" id="rui-oU-g6t"/>
@@ -202,7 +215,7 @@
                                             <constraint firstAttribute="height" constant="30" id="Waa-gD-Al7"/>
                                         </constraints>
                                     </stackView>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pic" translatesAutoresizingMaskIntoConstraints="NO" id="EjF-43-Nlq">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EjF-43-Nlq">
                                         <rect key="frame" x="0.0" y="281" width="288" height="223"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="223" id="NdX-Pj-qCC"/>
@@ -233,6 +246,7 @@
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
+                        <outlet property="myImageView" destination="EjF-43-Nlq" id="nfz-jP-wJl"/>
                         <outlet property="myTextField" destination="V1l-4b-GPL" id="GgG-jB-osp"/>
                         <outlet property="myTextView" destination="bYX-IW-cDu" id="y2i-bx-pcL"/>
                     </connections>
@@ -258,7 +272,4 @@
             <point key="canvasLocation" x="911" y="121"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="pic" width="976" height="649"/>
-    </resources>
 </document>
